Fix deprecated API warnings for JetBrains plugin submission
- Remove RawCommandLineEditor.setDialogCaption calls (no replacement needed)
- Update XDebuggerEditorsProvider.createDocument to use XExpression parameter
- Remove InitializeParams.setRootUri (workspace folders already used)
- Add @SuppressWarnings for SymbolInformation legacy fallback code
- Replace deprecated new URL(String) with URI.create().toURL() in 7 files