@@ -2,7 +2,7 @@ package com.ortussolutions.intellijboxlang.runtime;
 
 import com.intellij.openapi.progress.ProgressIndicator;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -18,7 +18,7 @@ public final class ForgeBoxLspInstaller {
 		ForgeBoxLspDescriptor descriptor = ForgeBoxLspResolver.resolve( version );
 		LOG.info( "bx-lsp download URL: " + descriptor.downloadUrl );
 		Path archive = targetDir.resolve( "bx-lsp.zip" );
-		BoxLangDownloadService.downloadTo( new URL( descriptor.downloadUrl ), archive, indicator );
+		BoxLangDownloadService.downloadTo( URI.create( descriptor.downloadUrl ).toURL(), archive, indicator );
 		LOG.info( "bx-lsp download complete: " + archive + " (" + Files.size( archive ) + " bytes)" );
 
 		BoxLangZipExtractor.extract( archive, targetDir );
